Implemented MCCFR for Leduc Poker
We have moved on from Kuhn Poker
and CFR and instead are now
focusing on building out the MCCFR
variant for Leduc Poker. Since the game
is relatively small, this will allow
us to debug the Real-Time-Search more easily.

--- a/distributed/cfr/Makefile
+++ b/distributed/cfr/Makefile
@@ -1,4 +1,4 @@
-OBJECTS = Node.o State.o Trainer.o MCCFRTrainer.o InfoNode.o main.o
+OBJECTS = Node.o State.o MCCFRTrainer.o InfoNode.o main.o
 
 CC = clang++
 
